--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,6 @@ h2, h3, h4, h5 {
   padding-right: 5%;
 }
 
-a {
-  color: #73ae08 !important;
-}
-
-
 .date-text {
   font-style: italic;
   font-size: 14px;
@@ -77,7 +72,7 @@ p {
 }
 
 a {
-  color: #231f20 !important;
+  color: #231f20;
   text-decoration: none;
   margin-top: 10px;
   display: block;
@@ -89,13 +84,14 @@ a {
 }
 
 a:hover {
-  color: #73ae08 !important;
+  color: #73ae08;
 }
 
 .welcome-message {
   font-style: italic;
   font-size: 18px;
-  color: #F3F3F3;
+  font-weight: bold;
+  color: #231f20;
   line-height: 28px;
 }
 
@@ -108,8 +104,8 @@ a:hover {
   display: none;
 }
 
-.orange {
-  background-color: #F5AE23;
+.connect-black {
+  background-color: #231f20;
 }
 
 .orange-text {
@@ -128,8 +124,8 @@ a:hover {
   clear:both;
 }
 
-.dark-gray {
-  background-color: #4A4A4A;
+.black {
+  background-color: #231f20;
 }
 
 /* TODO: Replace with image later */
